@@ -18,10 +18,11 @@
 			<mx:RemoveChild target="{button8}"/>
 			<mx:RemoveChild target="{button13}"/>
 			<mx:RemoveChild target="{usageButton}"/>
+			<mx:SetStyle target="{hbox8}" name="horizontalGap" value="10"/>
 		</mx:State>
 		<mx:State name="AdminState">
 			<mx:AddChild relativeTo="{hbox8}" position="lastChild">
-				<mx:VBox height="100%" verticalGap="2" id="vbox13">
+				<mx:VBox height="100%" verticalGap="1" id="vbox13">
 					<mx:HBox id="hbox1" horizontalGap="2" verticalAlign="middle" verticalGap="2">
 						<mx:Label text="Administration" styleName="welcomeLabel"/>
 					</mx:HBox> 
@@ -43,22 +44,37 @@
 			<mx:RemoveChild target="{sampleCharacteristicButton0}"/>
 			<mx:RemoveChild target="{alignmentProfileButton0}"/>
 			<mx:RemoveChild target="{organismButton0}"/>
-			<mx:RemoveChild target="{label4}"/>
-			<mx:AddChild relativeTo="{vbox9}" position="lastChild" target="{label4}"/>
-			<mx:RemoveChild target="{button12}"/>
-			<mx:AddChild relativeTo="{vbox9}" position="lastChild" target="{button12}"/>
-			<mx:RemoveChild target="{button8}"/>
-			<mx:AddChild relativeTo="{vbox9}" position="lastChild" target="{button8}"/>
-			<mx:SetStyle target="{label4}" name="paddingTop" value="10"/>
-			<mx:RemoveChild target="{label3}"/>
-			<mx:AddChild relativeTo="{hbox5}" position="before" target="{label3}"/>
-			<mx:RemoveChild target="{button4}"/>
-			<mx:AddChild relativeTo="{hbox5}" position="before" target="{button4}"/>
-			<mx:RemoveChild target="{button5}"/>
-			<mx:AddChild relativeTo="{hbox5}" position="before" target="{button5}"/>
 			<mx:RemoveChild target="{vbox1}"/>
-			<mx:SetStyle target="{label6}" name="paddingTop" value="10"/>
 			<mx:SetProperty target="{text1}" name="text" value="{'Welcome ' + parentApplication.userName + '   (admin privileges)'}"/>
+			<mx:RemoveChild target="{label3}"/>
+			<mx:AddChild relativeTo="{vbox9}" position="lastChild" target="{label3}"/>
+			<mx:RemoveChild target="{button4}"/>
+			<mx:AddChild relativeTo="{vbox9}" position="lastChild" target="{button4}"/>
+			<mx:RemoveChild target="{button5}"/>
+			<mx:AddChild relativeTo="{vbox9}" position="lastChild" target="{button5}"/>
+			<mx:SetStyle target="{label3}" name="paddingTop" value="8"/>
+			<mx:SetStyle target="{vbox9}" name="verticalGap" value="1"/>
+			<mx:SetStyle target="{vbox12}" name="verticalGap" value="1"/>
+			<mx:SetStyle target="{vbox10}" name="verticalGap"/>
+			<mx:SetStyle target="{hbox8}" name="horizontalGap" value="20"/>
+			<mx:AddChild relativeTo="{vbox9}" position="lastChild">
+				<mx:Label text="Data Tracks" id="label5" styleName="welcomeLabel" visible="{parentApplication.dataTrackSupported}" includeInLayout="{parentApplication.dataTrackSupported}" paddingTop="8"/>
+			</mx:AddChild>
+			<mx:AddChild relativeTo="{vbox9}" position="lastChild">
+				<mx:LinkButton label="Browse Data Tracks" click="showDataTracks()" styleName="dashboardButton"  id="button19"  verticalGap="4" toolTip="Browse data tracks" icon="@Embed(source='../../assets/datatrack.jpg')"  visible="{parentApplication.dataTrackSupported}" includeInLayout="{parentApplication.dataTrackSupported}"/>
+			</mx:AddChild>
+			<mx:RemoveChild target="{label4}"/>
+			<mx:RemoveChild target="{button12}"/>
+			<mx:RemoveChild target="{button8}"/>
+			<mx:AddChild relativeTo="{vbox12}" position="lastChild">
+				<mx:Label text="Billing" id="label7" styleName="welcomeLabel" paddingTop="42"/>
+			</mx:AddChild>
+			<mx:AddChild relativeTo="{vbox12}" position="lastChild">
+				<mx:LinkButton label="Pricing" click="showPricing()" styleName="dashboardButton"  id="button20"  toolTip="Show core facility pricing for experiment services and products" icon="@Embed(source='../../assets/money_dollar.png')" visible="{parentApplication.pricingURL != ''}"/>
+			</mx:AddChild>
+			<mx:AddChild relativeTo="{vbox12}" position="lastChild">
+				<mx:LinkButton label="Submit Work Authorization" click="showWorkAuthForm()" styleName="dashboardButton" id="button21"  toolTip="Submit a work authorization form indicating the billing account to be charged for work" icon="@Embed(source='../../assets/work_auth_form.png')"/>
+			</mx:AddChild>
 		</mx:State>
 		<mx:State name="UserNonSubmitterState">
 			<mx:RemoveChild target="{button1}"/>
@@ -68,15 +84,18 @@
 			<mx:RemoveChild target="{alignmentProfileButton0}"/>
 			<mx:RemoveChild target="{organismButton0}"/>
 			<mx:SetProperty target="{text1}" name="text" value="{'Welcome ' + parentApplication.userName}"/>
+			<mx:RemoveChild target="{label4}"/>
+			<mx:AddChild relativeTo="{vbox9}" position="lastChild" target="{label4}"/>
+			<mx:RemoveChild target="{button12}"/>
+			<mx:AddChild relativeTo="{vbox9}" position="lastChild" target="{button12}"/>
+			<mx:RemoveChild target="{button8}"/>
+			<mx:AddChild relativeTo="{vbox9}" position="lastChild" target="{button8}"/>
 		</mx:State>
 		<mx:State name="ExternalUserState">
 		</mx:State>
 		<mx:State name="AdminESState" basedOn="AdminState">
 			<mx:RemoveChild target="{button1}"/>
 			<mx:RemoveChild target="{amendButton}"/>
-			<mx:RemoveChild target="{label4}"/>
-			<mx:RemoveChild target="{button12}"/>
-			<mx:RemoveChild target="{button8}"/>
 			<mx:SetStyle target="{label6}" name="paddingTop" value="4"/>
 			<mx:RemoveChild target="{label3}"/>
 			<mx:AddChild relativeTo="{vbox9}" position="lastChild" target="{label3}"/>
@@ -84,8 +103,8 @@
 			<mx:AddChild relativeTo="{vbox9}" position="lastChild" target="{button4}"/>
 			<mx:RemoveChild target="{button5}"/>
 			<mx:AddChild relativeTo="{vbox9}" position="lastChild" target="{button5}"/>
-			<mx:SetStyle target="{label3}" name="paddingTop" value="26"/>
 			<mx:SetProperty target="{submitExternalExperimentButton}" name="label" value="Register Experiment"/>
+			<mx:SetStyle target="{label7}" name="paddingTop" value="8"/>
 		</mx:State>
 		<mx:State name="UserESState">
 			<mx:RemoveChild target="{button1}"/>
@@ -104,9 +123,6 @@
 			<mx:SetProperty target="{submitExternalExperimentButton}" name="label" value="Register Experiment"/>
 		</mx:State>
 		<mx:State name="UserNonSubmitterESState" basedOn="UserNonSubmitterState">
-			<mx:RemoveChild target="{label4}"/>
-			<mx:RemoveChild target="{button12}"/>
-			<mx:RemoveChild target="{button8}"/>
 			<mx:SetProperty target="{text1}" name="text" value="{'Welcome ' + parentApplication.userName}"/>
 		</mx:State>
 		<mx:State name="UnivGuestState" basedOn="UserNonSubmitterState">
@@ -141,15 +157,45 @@
 				<mx:LinkButton label="Review Results"  click="reviewResults()"  
 							   styleName="dashboardButton" id="button17"  toolTip="Review results" icon="@Embed(source='../../assets/tv_chart.png')"/>
 			</mx:AddChild>
-			<mx:RemoveChild target="{label4}"/>
-			<mx:AddChild relativeTo="{vbox13}" position="lastChild" target="{label4}"/>
-			<mx:RemoveChild target="{button12}"/>
-			<mx:AddChild relativeTo="{vbox13}" position="lastChild" target="{button12}"/>
-			<mx:RemoveChild target="{button8}"/>
-			<mx:AddChild relativeTo="{vbox13}" position="lastChild" target="{button8}"/>
-			<mx:SetStyle target="{label4}" name="paddingTop" value="20"/>
-			<mx:SetStyle target="{label2}" name="paddingTop" value="20"/>
-			<mx:SetStyle target="{label6}" name="paddingTop" value="20"/>
+			<mx:SetStyle target="{label2}" name="paddingTop" value="8"/>
+			<mx:SetStyle target="{vbox9}" name="verticalGap" value="0"/>
+			<mx:SetStyle target="{vbox12}" name="verticalGap" value="0"/>
+			<mx:SetStyle target="{vbox13}" name="verticalGap" value="0"/>
+			<mx:SetStyle target="{label7}" name="paddingTop" value="8"/>
+			<mx:RemoveChild target="{label3}"/>
+			<mx:RemoveChild target="{button4}"/>
+			<mx:RemoveChild target="{button5}"/>
+			<mx:RemoveChild target="{label5}"/>
+			<mx:RemoveChild target="{button19}"/>
+		</mx:State>
+		<mx:State name="SuperAdminDNASeqState" basedOn="AdminState">
+			<mx:AddChild relativeTo="{hbox5}" position="before">
+				<mx:Label text="DNA Sequencing Core" id="label8" styleName="welcomeLabel"/>
+			</mx:AddChild>
+			<mx:AddChild relativeTo="{hbox5}" position="before">
+				<mx:LinkButton label="Review Orders"  click="reviewOrders()"  
+							   styleName="dashboardButton" id="button22"  toolTip="Review pending orders" icon="@Embed(source='../../assets/page.png')"/>
+			</mx:AddChild>
+			<mx:AddChild relativeTo="{hbox5}" position="before">
+				<mx:LinkButton label="Fill Plates"  click="fillPlates()"  
+							   styleName="dashboardButton" id="button23"  toolTip="Fill plates" icon="@Embed(source='../../assets/plate_add.png')"/>
+			</mx:AddChild>
+			<mx:AddChild relativeTo="{hbox5}" position="before">
+				<mx:LinkButton label="Review Instrument Runs"  click="reviewRuns()"  
+							   styleName="dashboardButton" id="button24"  toolTip="View instrument runs" icon="@Embed(source='../../assets/genome_build1.png')"/>
+			</mx:AddChild>
+			<mx:AddChild relativeTo="{hbox5}" position="before">
+				<mx:LinkButton label="Review Results"  click="reviewResults()"  
+							   styleName="dashboardButton" id="button25"  toolTip="Review results" icon="@Embed(source='../../assets/tv_chart.png')"/>
+			</mx:AddChild>
+			<mx:RemoveChild target="{label7}"/>
+			<mx:AddChild relativeTo="{vbox13}" position="lastChild" target="{label7}"/>
+			<mx:RemoveChild target="{button20}"/>
+			<mx:AddChild relativeTo="{vbox13}" position="lastChild" target="{button20}"/>
+			<mx:RemoveChild target="{button21}"/>
+			<mx:AddChild relativeTo="{vbox13}" position="lastChild" target="{button21}"/>
+			<mx:SetStyle target="{label7}" name="paddingTop" value="8"/>
+			<mx:SetStyle target="{label6}" name="paddingTop" value="8"/>
 		</mx:State>
 	</mx:states>
 	<mx:Script>
@@ -179,7 +225,11 @@
 					if (parentApplication.isExternalDataSharingSite) {
 						currentState = "AdminESState";
 					} else if (parentApplication.isCoreDNASeq) {
-						currentState = "AdminDNASeqState"
+						if (parentApplication.hasPermission(parentApplication.PROPERTY_CAN_ADMINISTER_ALL_CORE_FACILITIES)) {
+							currentState = "SuperAdminDNASeqState"
+						} else {
+							currentState = "AdminDNASeqState"
+						}
 					} else {
 						currentState = "AdminState";
 					}
@@ -242,6 +292,9 @@
 			private function showAnalysis():void {
 				this.parentApplication.navAnalysisView.shortcutToAnalysisListTab = true;
 				this.parentApplication.theViews.selectedChild = this.parentApplication.navAnalysisView;
+			}
+			private function showDataTracks():void {
+				this.parentApplication.theViews.selectedChild = this.parentApplication.navDataTrackView;
 			}
 			private function showAnalysisDownloads():void {
 				this.parentApplication.navAnalysisView.shortcutToDownloadTab = true;
@@ -323,6 +376,7 @@
 	
 	<mx:Text text="{'Welcome ' + parentApplication.userName}" styleName="welcomeUserLabel" left="12" top="12" id="text1"/>
 	<mx:Text  bottom="2" right="2" text="{'Session started ' + parentApplication.loginDateTime}" styleName="welcomeSessionLabel"/>
+	<mx:Text text="{parentApplication.siteWelcomeMessage}" styleName="welcomeUserLabel" left="200" top="12"/>
 	<mx:VBox   top="12" right ="12"  visible="{parentApplication.bulletin != ''}" backgroundColor="#FFFFFF" backgroundAlpha="1" id="vbox11">
 		<mx:Text text="{parentApplication.bulletin}" fontSize="11"  width="300" fontStyle="italic" />  			
 	</mx:VBox>
@@ -331,7 +385,6 @@
 		verticalAlign="middle" horizontalAlign="center"  
 		paddingRight="6" paddingLeft="6" paddingBottom="6" verticalGap="40" paddingTop="6" id="vbox10">
 
-		<mx:Text text="{parentApplication.siteWelcomeMessage}" styleName="welcomeUserLabel" left="12" top="32"/>
 		
 		<mx:HBox width="100%" verticalAlign="top" horizontalAlign="center" horizontalGap="40" id="hbox8">
 			<mx:VBox height="100%" width="268" verticalGap="2" id="vbox9">
@@ -359,6 +412,8 @@
 				</mx:HBox> 
 				<mx:LinkButton label="Browse Analyses" click="showAnalysis()" styleName="dashboardButton"  id="button4"  verticalGap="4" toolTip="Browse analysis entries, view analysis annotations" icon="@Embed(source='../../assets/map.png')"/>
 				<mx:LinkButton label="Download Analyzed data files" click="showAnalysisDownloads()" styleName="dashboardButton"  id="button5"  toolTip="Download analysis data files" icon="@Embed(source='../../assets/download.png')"/>
+				<mx:Label text="Data Tracks" id="label1" styleName="welcomeLabel" paddingTop="12"  visible="{parentApplication.dataTrackSupported}" includeInLayout="{parentApplication.dataTrackSupported}"/>
+				<mx:LinkButton label="Browse Data Tracks" click="showDataTracks()" styleName="dashboardButton"  id="button18"  verticalGap="4" toolTip="Browse data tracks" icon="@Embed(source='../../assets/datatrack.jpg')"  visible="{parentApplication.dataTrackSupported}" includeInLayout="{parentApplication.dataTrackSupported}"/>
 				<mx:Label text="Billing" id="label4" styleName="welcomeLabel" paddingTop="20"/>
 				<mx:LinkButton label="Pricing" click="showPricing()" styleName="dashboardButton"  id="button12"  toolTip="Show core facility pricing for experiment services and products" icon="@Embed(source='../../assets/money_dollar.png')" visible="{parentApplication.pricingURL != ''}"/>
 				<mx:LinkButton label="Submit Work Authorization" click="showWorkAuthForm()" styleName="dashboardButton" id="button8"  toolTip="Submit a work authorization form indicating the billing account to be charged for work" icon="@Embed(source='../../assets/work_auth_form.png')"/>
